      images.  (Allows stamps to be made larger without losing quality.)
      Albert Cahalan <albert@users.sf.net>

    * More range for stamp sizes. Can't hang off edge in both dimensions.
      Albert Cahalan <albert@users.sf.net>
 
  * New Magic tools:
    ----------------
    * "Smudge" (pushes the colors around like wet paint)
      Albert Cahalan <albert@users.sf.net>
  
    * "Darken" (opposite of "Fade"),
    * "Tint" (changes colors of parts of the picture), and
    * "Cartoon" (makes parts of the picture look like a cartoon or comic)
      Bill Kendrick <bill@newbreedsoftware.com>
  
  * Magic tool improvements:
    ------------------------
    * Magic blur effect now gamma-aware, circular, and modifying all points
      within the brush instead of just 25% of them.
      Albert Cahalan <albert@users.sf.net>
  
    * Magic blocks effect now gamma-aware and using all 16 (not just 4)
      source pixels.
      Albert Cahalan <albert@users.sf.net>

  * Improved support for varying image sizes:
    -----------------------------------------
    * Somewhat better treatment of wrong-sized images when loading them.
      It works well for typical kid drawings, as long as objects don't
      touch the edge of the screen. (the earth and sky -- and anything
      else at the edge -- get extended to fill the space) This could be
      better done with wavelets I think, or some vector-based notion of
      what lies at the edge of the screen. Starters, as usual, need work.
      Albert Cahalan <albert@users.sf.net>

    * Fixed display corruption in 'Open' dialog when saved images are
      from a larger display size.
      Albert Cahalan <albert@users.sf.net>

  * System-related improvements:
    ----------------------------
    * Added larger screen size support:
      1024x768, 1280x1024, 1400x1050, 1600x1200
      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

    * Arbitrary window sizes allowed (--XXXXxYYYY); useful for more modern